# QtProjects

ClimateControl/: CMakeLists.txt  ClimateControl.qml  Main.qml  README.md  README.md.txt  ZoneControls.qml  main.cpp
GuitarProject/: CMakeLists.txt  Main.qml  main.cpp
RemoteControl/: CMakeLists.txt  PilotButton.qml  README.md  main.cpp
RestaurantMenu/: CMakeLists.txt  Main.qml  MenuControl.qml  MenuItemRow.qml  MenuSide.qml  README.md  README.md.txt  main.cpp
